Update test.html file.

--- a/public/test.html
+++ b/public/test.html
@@ -1,12 +1,1 @@
-<img src="http://localhost:3000/pageview?
-tracked_page_id=653476
-&
-page_url=http://www.suite101.com/content/chocolate-has-an-expiration-date-a347637
-&
-page_title=Chocolate%20has%20an%20Expiration%20Date
-&
-writer_id=731923
-&
-cookie_id=12345
-&
-referrer_url=">
+<img src="localhost:3000/add_page_view?tracked_page_id=1234&page_url=http://www.google.ca&page_title=hello&writer_id=987&cookie_id=randomstuff&visited_at=Wed+Feb+23+10%3A45%3A38+-0800+2011&referrer_url=http://www.google.com">
