Integrated with resque!

--- a/public/test.html
+++ b/public/test.html
@@ -1,1 +1,1 @@
-<img src="localhost:3000/add_page_view?tracked_page_id=1234&page_url=http://www.google.ca&page_title=hello&writer_id=987&cookie_id=randomstuff&visited_at=Wed+Feb+23+10%3A45%3A38+-0800+2011&referrer_url=http://www.google.com">
+<img src="http://localhost:3000/add_page_view?tracked_page_id=1234&page_url=http://www.google.ca&page_title=hello&writer_id=987&cookie_id=randomstuff&visited_at=Wed+Feb+23+10%3A45%3A38+-0800+2011&referrer_url=http://www.google.com">
