--- a/public/test.html
+++ b/public/test.html
@@ -1,1 +1,1 @@
-<img src="http://stats.staging.suite101.com/add_page_view?tracked_page_id=1234&page_url=http://www.google.ca&page_title=hello&writer_id=987&cookie_id=fakeid2&visited_at=Wed+Feb+23+10%3A45%3A38+-0800+2011&referrer_url=http://www.google.com">
+<img src="http://stats.staging.suite101.com/add_page_view?suite101_article_id=1234&permalink=http://www.google.ca&title=hello&writer_id=987&cookie_id=fakeid2&date=Wed+Feb+23+10%3A45%3A38+-0800+2011&referrer_url=http://www.google.com">
